--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D86D1B</color>
     <color name="colorNegative">#B8B8B8</color>
+    <color name="white">#cccccc</color>
+    <color name="colorgreen">#4CAF50</color>
 </resources>
