--- a/app/src/main/res/layout/activity_goal.xml
+++ b/app/src/main/res/layout/activity_goal.xml
@@ -14,32 +14,34 @@
         android:orientation="vertical"
 
     >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:orientation="horizontal"
             android:layout_marginBottom="1dp"
-            >
+            android:background="#ffffff"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/content"
                 android:layout_width="0dp"
-                android:layout_weight="30"
                 android:layout_height="match_parent"
+                android:layout_weight="30"
                 android:background="#FFFFFF"
-                android:padding="20dp"
                 android:fontFamily="@font/nsb"
+                android:hint="습관 목록을 등록해볼까요?"
 
                 android:inputType="textMultiLine"
-                android:text="습관 목록을 등록해볼까요?"
+                android:padding="20dp"
                 android:textSize="24sp" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Write"
-                android:background="#FFFFFF"
-                android:onClick="sqlAdd"/>
+                android:background="?attr/selectableItemBackground"
+                android:onClick="sqlAdd"
+                android:text="Write" />
 
         </LinearLayout>
 
